# min_repro_metadata

./: Cargo.toml  flake.nix
migrations/: 20240920103353_add_some_table.sql
src/: lib.rs
